--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<html>
-<head>
-<title> DEVSOFT'S GITHUB REPO.</title>
-</head>
-<body>
-<body bgcolor="#000000">
-<font color="green">
-<H1>SUBSRIBE TO MEMEULAS</H1>
-<H1> OR I</H1>
-<H2>WILL SHANK YOUR NAN!
-</font>
+<body bgcolor="#808080
+<p><span style="color: #339966;">DeVSoft on GitHub</span></p>
+<h1><span style="color: #339966;">DeVsoft is now on GitHub. Look at our shit below!</span></h1>
+<p><span style="color: #339966;">:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::</span></p>
+<p><span style="color: #339966;">1. ShankDoseMemeShank&nbsp;<a style="color: #339966;" href="https://devsoftuk.github.io/shankmemeshank">CLICK</a></span></p>
 </body>
